--- a/src/app/config/tabs/configtab2.html
+++ b/src/app/config/tabs/configtab2.html
@@ -35,8 +35,8 @@
             </div>
         </div>
         <div class="detail_btn">
-                <button type="button" class="btn save_btn"><label translate>Save</label></button>
-                <button type="button" class="btn tab_no next_btn" (click)="nextClicked('true')"><label translate>Next</label></button>
+                <button type="button" class="btn btn1 save_btn"><label translate>Save</label></button>
+                <button type="button" class="btn btn2 tab_no next_btn" (click)="nextClicked('true')"><label translate>Next</label></button>
             </div>
        
 <footer class="text_center">
