--- a/src/app/createPage/textbox.component.html
+++ b/src/app/createPage/textbox.component.html
@@ -20,8 +20,8 @@
                    href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
             </span>
         </div>
-<div [class]="css">
-<input class="cmn_input" [placeholder]="pholder0_tb" [value]="str0_tb" [id]="strid0_tb">
+<div class="col-md-6 col-sm-6 col-xs-12 klvrn_col dtl_row">
+<input class="cmn_input" [placeholder]="pholder" [value]="value" [id]="id">
 </div>
 </div>
 
