--- a/src/app/dashboard/tabs/dashtab.html
+++ b/src/app/dashboard/tabs/dashtab.html
@@ -81,10 +81,10 @@
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-right">
                                         <li>
-                                            <a href="#" class="view btn-sm"><label translate>English</label></a>
+                                            <a (click)="changeLang('en')" class="view btn-sm"><label translate>English</label></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="view btn-sm"><label translate>Hindi</label></a>
+                                            <a (click)="changeLang('hindi')" class="view btn-sm"><label translate>Hindi</label></a>
                                         </li>
                                     </ul>
                                 </li>
