--- a/src/app/createPage/addDoc.component.html
+++ b/src/app/createPage/addDoc.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="col-md-6 col-sm-6 element_box">
+<div [class]="css">
     <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(0)">
@@ -35,7 +35,7 @@
 
 <div *ngFor="let tb of Textboxes">
     <div *ngIf="showTextBox && tb!==undefined">
-    <div class="col-md-6 col-sm-6 element_box">
+    <div [class]="css">
         <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(tb.idx)">
