--- a/src/app/createPage/checkbox.component.html
+++ b/src/app/createPage/checkbox.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="col-md-6 col-sm-6 element_box">
+<div [class]="css">
     <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(0)">
@@ -23,8 +23,8 @@
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12 custom_chk_bx dtl_row">
         <div class="chk_bx chk_top">
-            <input type="checkbox" id="chkid1" name="" value="">
-            <label for="chkid1">check box1</label>
+            <input type="checkbox" [id]="id" name="" [value]="value">
+            <label [for]="id">check box1</label>
         </div>
     </div>
 </div>
