--- a/src/app/createPage/password.component.html
+++ b/src/app/createPage/password.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="col-md-6 col-sm-6 element_box">
+<div [class]="css">
     <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(0)">
@@ -24,7 +24,7 @@
     <div class="col-md-6 col-sm-6 col-xs-12 dtl_row">
         <label class="lbl_hdr">Password</label>
         <div class="input-group">
-            <input class="cmn_input password" placeholder="Password" type="password">
+            <input [id]="id" [value]="value" class="cmn_input password" [placeholder]="pholder" type="password">
             <span class="input-group-addon custom_icn">
                 <span class="fa fa-lock"></span>
             </span>
