--- a/src/app/createPage/switch.component.html
+++ b/src/app/createPage/switch.component.html
@@ -3,7 +3,7 @@
 
 
 
-<div class="col-md-6 col-sm-6 element_box">
+<div [class]="css">
     <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(0)">
@@ -27,8 +27,8 @@
     <div class="col-md-6 col-sm-6 col-xs-12 dtl_row">
         
                                 <div class="tgl_switch">
-                                    <input type="checkbox" class="tgl" id="lbl_tgl" />
-                                    <label for="lbl_tgl"></label>
+                                    <input type="checkbox" class="tgl" [id]="id"  [checked]="value"/>
+                                    <label [for]="id"></label>
                                 </div>
                             </div>
 </div>
