--- a/src/app/createPage/textarea.component.html
+++ b/src/app/createPage/textarea.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="col-md-6 col-sm-6 element_box">
+<div [class]="css">
     <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(0)">
@@ -22,7 +22,7 @@
         </span>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12 klvrn_col dtl_row">
-        <textarea id="Textarea1" class="cmn_input" placeholder="textarea"></textarea>
+        <textarea [id]="id" class="cmn_input" [value]="value" [placeholder]="pholder"></textarea>
     </div>
 </div>
 
