--- a/src/app/createPage/textboxwithlbl.component.html
+++ b/src/app/createPage/textboxwithlbl.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-sm-6 element_box">
+<div [class]="css">
     <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(0)">
@@ -19,8 +19,8 @@
                href="javascript:void(0);"><i class="fa fa-refresh"></i><span class="tooltip">Reset</span></a>
         </span>
     </div>
-<div class="col-md-6 col-sm-6 element_box1">
-<input class="cmn_input" [placeholder]="pholder0_tb" [value]="str0_tb" [id]="strid0_tb">
+<div class="col-md-6 col-sm-6 col-xs-12 klvrn_col dtl_row">
+<input class="cmn_input" [placeholder]="pholder" [value]="value" [id]="id">
 </div>
 </div>
 
