--- a/src/app/createPage/timePicker.component.html
+++ b/src/app/createPage/timePicker.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-sm-6 element_box">
+<div [class]="css">
     <div class="action-ui" id="tour-action-ui-id">
         <span class="actions">
             <a class="" (click)="cloneElement(0)">
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-6 col-sm-6 col-xs-12 dtl_row klvrn_dt_picker">
         <label class="lbl_hdr">Select Time: </label>
-        <div class='input-group date' id='datetimepicker2'>
+        <div class='input-group date' [id]='id'>
             <input type='text' class="cmn_input" />
             <span class="input-group-addon">
                 <span class="fa fa-clock-o"></span>
