--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -335,9 +335,9 @@
                     </div>
                 </div>
             </div>
-            <footer class="text_center">
+            <!-- <footer class="text_center">
                 <h4> <label translate>© 2017 Kleveron. A venture of <a href="#"> SRKay </a> Consulting Group LLP. All Rights Reserved.</label></h4>
-            </footer>
+            </footer> -->
         </div>
         <div class="clearfix">
         </div>
