--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -138,7 +138,7 @@ label {
     padding-bottom: 54px;
 }
 
-    .welcome_txt h2 highlight {
+    .welcome_txt h2 span.highlight {
         color: #f29634;
         display: block;
     }
